--- a/client/src/styles/root.css
+++ b/client/src/styles/root.css
@@ -1,7 +1,3 @@
-/*=============================================== Root ===============================================*/
-
-/* Add here your overrides */
-
 :root {
-    
+    /* Add your overrides here */
 }
